force-app/main/default/objects/Release_Playbook_Item__c/Release_Playbook_Item__c.object-meta.xml
<CustomObject>
    <label>Release Playbook Item</label>
    <nameField>
        <displayFormat>RPI-{000000}</displayFormat>
        <label>Release Playbook Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Playbook Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>