force-app/main/default/objects/Release_Playbook_Item__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>TEXT(FLOOR((End_Date_Time__c - Start_Date_Time__c))) &amp; &quot; Day(s) &quot; &amp;
TEXT(FLOOR(MOD((End_Date_Time__c - Start_Date_Time__c) * 24, 24))) &amp; &quot; Hour(s) &quot; &amp;
TEXT(FLOOR(MOD((End_Date_Time__c - Start_Date_Time__c) * 24 * 60, 60))) &amp; &quot; Minute(s)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Duration between Start Date/Time and End Date/Time</inlineHelpText>
    <label>Duration</label>
    <type>Text</type>
</CustomField>