force-app/main/default/objects/Release_Playbook_Item__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preprod</fullName>
            </value>
            <value>
                <fullName>Prod</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>