force-app/main/default/objects/Release_Playbook_Item__c/fields/Execution_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Execution_Sequence__c</fullName>
    <label>Execution Sequence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before Deployment</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>After Deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>