force-app/main/default/objects/Release_Playbook_Item__c/fields/Issues_Comments__c.field-meta.xml
<CustomField>
    <fullName>Issues_Comments__c</fullName>
    <label>Issues/Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>