force-app/main/default/objects/Release_Playbook_Item__c/fields/Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Performed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Playbook_Items</relationshipName>
    <type>Lookup</type>
</CustomField>