force-app/main/default/objects/Release_Playbook_Item__c/fields/Release_Playbook__c.field-meta.xml
<CustomField>
    <fullName>Release_Playbook__c</fullName>
    <label>Release Playbook</label>
    <referenceTo>Release_Playbook__c</referenceTo>
    <relationshipLabel>Release Playbook Items</relationshipLabel>
    <relationshipName>Release_Playbook_Items1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>