force-app/main/default/objects/Release_Playbook_Item__c/fields/Release_Playbook_Template_Item__c.field-meta.xml
<CustomField>
    <fullName>Release_Playbook_Template_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Playbook Template Item</label>
    <referenceTo>Release_Playbook_Item__c</referenceTo>
    <relationshipLabel>Release Playbook Items</relationshipLabel>
    <relationshipName>Release_Playbook_Items</relationshipName>
    <type>Lookup</type>
</CustomField>