force-app/main/default/objects/Release_Playbook_Item__c/fields/Required_Sub_Item_s__c.field-meta.xml
<CustomField>
    <fullName>Required_Sub_Item_s__c</fullName>
    <label>Required Sub Item(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Deployment Step</fullName>
            </value>
            <value>
                <fullName>Git Snapshot</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Scan Comparison</fullName>
            </value>
            <value>
                <fullName>Snapshot Commit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>