force-app/main/default/objects/Release_Playbook_Item__c/fields/Requires_Sub_Item__c.field-meta.xml
<CustomField>
    <fullName>Requires_Sub_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Sub Item</label>
    <type>Checkbox</type>
</CustomField>