force-app/main/default/objects/Release_Playbook_Item__c/fields/SCA__c.field-meta.xml
<CustomField>
    <fullName>SCA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCA</label>
    <type>Checkbox</type>
</CustomField>