force-app/main/default/objects/Release_Playbook_Item__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Prod Deployment</fullName>
            </value>
            <value>
                <fullName>Pre-Deployment</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Go Live</fullName>
            </value>
            <value>
                <fullName>Post Go Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>