force-app/main/default/objects/Release_Playbook_Item__c/fields/Sub_Items_Logic__c.field-meta.xml
<CustomField>
    <fullName>Sub_Items_Logic__c</fullName>
    <label>SubItem Execute Logic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before Deployment - Created Package</fullName>
            </value>
            <value>
                <fullName>Before Deployment - Run SCA on Prod</fullName>
            </value>
            <value>
                <fullName>After Deployment - Run SCA on Prod</fullName>
            </value>
            <value>
                <fullName>Before Deployment - Preprod Promotion Package</fullName>
            </value>
            <value>
                <fullName>Deployment - Preprod Package Completion</fullName>
            </value>
            <value>
                <fullName>After Deployment - Deploy PROD Package To Training</fullName>
            </value>
            <value>
                <fullName>After Deployment - Deploy PROD Package To PioneerPOC</fullName>
            </value>
            <value>
                <fullName>After Deployment - Deploy PROD Package To POCDEV1</fullName>
            </value>
            <value>
                <fullName>Before Deployment - Sanpshot Commit - Release</fullName>
            </value>
            <value>
                <fullName>Before Deployment - Validate Package</fullName>
            </value>
            <value>
                <fullName>Before Deployment - Create Promotion - Sign off Stories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>