force-app/main/default/objects/Release_Playbook_Item__c/fields/SubItemLogic__c.field-meta.xml
<CustomField>
    <fullName>SubItemLogic__c</fullName>
    <description>Field used to reference Apex method to run to capture start/end time stamps.</description>
    <label>SubItemLogic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>