force-app/main/default/objects/Release_Playbook_Item__c/recordTypes/Backout_Plan_Item.recordType-meta.xml
<RecordType>
    <fullName>Backout_Plan_Item</fullName>
    <active>true</active>
    <label>Backout Plan Item</label>
</RecordType>