force-app/main/default/objects/Release_Playbook_Item__c/recordTypes/Release_Activity.recordType-meta.xml
<RecordType>
    <fullName>Release_Activity</fullName>
    <active>true</active>
    <label>Release Activity</label>
</RecordType>