force-app/main/default/objects/Release_Playbook_Item__c/recordTypes/Release_Item_Templates.recordType-meta.xml
<RecordType>
    <fullName>Release_Item_Templates</fullName>
    <active>true</active>
    <label>Release Item Templates</label>
</RecordType>