force-app/main/default/objects/Release_Playbook_Item__c/listViews/Release_Activity.listView-meta.xml
<ListView>
    <fullName>Release_Activity</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Release_Playbook_Item__c.Release_Activity</value>
    </filters>
    <label>Release Activity</label>
</ListView>