force-app/main/default/objects/Release_Playbook_Item__c/listViews/Release_Item_Templates.listView-meta.xml
<ListView>
    <fullName>Release_Item_Templates</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Stage__c</columns>
    <columns>Order__c</columns>
    <columns>Release_Playbook__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Release_Playbook_Item__c.Release_Item_Templates</value>
    </filters>
    <label>Release Item Templates</label>
</ListView>